SRC/objects/Transaction_Limit__c.object
<CustomObject>
    <fields>
        <fullName>Maximum_Debit_Allowed_Per_Day__c</fullName>
        <label>Maximum Debit Allowed Per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Debit_Allowed_Per_Month__c</fullName>
        <label>Maximum Debit Allowed Per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Debit_Allowed_Per_Transaction__c</fullName>
        <label>Maximum Debit Allowed Per Transaction</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Transaction_Allowed_Per_Day__c</fullName>
        <label>Maximum Transaction Allowed Per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Transaction_Allowed_Per_Month__c</fullName>
        <label>Maximum Transaction Allowed Per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Transaction Limit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction Limit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>